--- a/web-app/src/App.css
+++ b/web-app/src/App.css
@@ -37,24 +37,31 @@
   }
 }
 
-/* Add a black background color to the top navigation */
-#topnav {
-  background-color: #333;
+#navigation-bar {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
   overflow: hidden;
+  background-color: #333;
 }
 
-/* Style the links inside the navigation bar */
-#topnav a {
+#navigation-bar li {
   float: left;
-  color: #f2f2f2;
+}
+
+#navigation-bar li a {
+  display: block;
+  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
 }
 
-/* Change the color of links on hover */
-#topnav a:hover {
-  background-color: #ddd;
-  color: black;
+#navigation-bar li a:hover:not(.active) {
+  background-color: #111;
 }
+
+#navigation-bar .active {
+  background-color: #04AA6D;
+}
+
